--- a/src/views/Dashboard/Customers/Customers.scss
+++ b/src/views/Dashboard/Customers/Customers.scss
@@ -50,3 +50,12 @@
     }
   }
 }
+.clear-filter-btn{
+  height: 4rem;
+  margin-left: 1.6rem;
+  @include on-event {
+    background-color: $blue;
+    color: $white;
+    border: none;
+  }
+}
