--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -102,6 +102,7 @@
     }
   }
   [data-status="failed"],
+  [data-status="inactive"],
   [data-status="suspended"] {
     @extend %status;
     color: $red;
