--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -79,10 +79,21 @@
     }
   }
 }
+
 .filter-dropdown{
   &__menu {
     position: absolute;
     top: 5rem;
     right: 0.6rem;
   }
+}
+
+.overlay {
+  position: fixed;
+  z-index: 10;
+  // background-color: #3a434b11;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
 }
