--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -90,6 +90,7 @@ nav {
       box-shadow: 0 7.52055px 16.7123px rgba(171, 180, 189, 0.23);
       border-radius: 4px;
       position: absolute;
+      z-index: 20;
       top: 5rem;
       right: 0;
       &-content {
@@ -126,8 +127,22 @@ nav {
 
   #arrow:checked ~ #hidden-nav {
     display: block;
+    ~ .overlay {
+      display: block;
+    }
   }
 }
 .avatar {
   width: 3.4rem;
+}
+
+.overlay {
+  position: fixed;
+  z-index: 10;
+  // background-color: #3a434b11;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: none;
 }
