--- a/src/views/Dashboard/Demo/Demo.scss
+++ b/src/views/Dashboard/Demo/Demo.scss
@@ -34,3 +34,13 @@
     }
   }
 }
+
+.clear-filter-btn{
+  height: 4rem;
+  margin-left: 1.6rem;
+  @include on-event {
+    background-color: $blue;
+    color: $white;
+    border: none;
+  }
+}
