--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -5,13 +5,13 @@
   display: flex;
   justify-content: flex-end;
   position: fixed;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 100;
 
   .modal-content {
-    position: absolute;
     top: 0;
     width: 100%;
     height: 100vh;
